# spareroom_kata

./: .gitignore  README.md  example_usage.py  main.py  pyproject.toml  requirements.txt
config/: config.yml
src/backend/checkout/: checkoutRouter.py  functions.py
src/backend/dao/: daoRoutines.py  readDao.py
src/backend/database/: dbConnectionFactory.py  db_setup.py  offers.csv  prices.csv  shoppingitems.db
src/backend/tests/: test_checkout_functions.py  test_checkout_router.py  test_dao_routines.py  test_db_connection_factory.py
src/checkout/: checkoutRouter.py  checkout_router.py  functions.py
src/common/: pricing.json
src/dao/: daoRoutines.py  itemsReadDao.py  itemsWriteDao.py  readDao.py
src/database/: dbConnectionFactory.py  db_setup.py  offers.csv  shoppingitems.db
src/frontend copy/src/: checkout.tsx
src/frontend/src/: App.tsx  checkout.tsx
src/tests/: test_checkout_functions.py  test_checkout_router.py  test_dao_routines.py  test_db_connection_factory.py  test_main.py
