[project]
name = "spareroom-kata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py==0.11.0",
    "asgiref==3.3.4",
    "astor==0.8.1",
    "astunparse==1.6.3",
    "backcall==0.2.0",
    "cachetools==4.2.1",
    "certifi==2020.12.5",
    "chardet==4.0.0",
    "colorama==0.4.4",
    "cycler==0.10.0",
    "decorator==4.4.2",
    "django==3.2.2",
    "django-crispy-forms==1.11.2",
    "fastapi[standard]>=0.121.1",
    "flatbuffers==1.12",
    "gast==0.3.3",
    "google-auth==1.24.0",
    "google-auth-oauthlib==0.4.2",
    "google-pasta==0.2.0",
    "graphviz==0.16",
    "grpcio==1.32.0",
    "h5py==2.10.0",
    "httpx>=0.28.1",
    "idna==2.10",
    "importlib-metadata==3.4.0",
    "ipykernel==5.4.3",
    "ipython==7.19.0",
    "ipython-genutils==0.2.0",
    "jedi==0.18.0",
    "joblib==1.0.1",
    "jupyter-client==6.1.11",
    "jupyter-core==4.7.0",
    "keras==2.4.3",
    "keras-applications==1.0.2",
    "keras-preprocessing==1.1.2",
    "kiwisolver==1.3.1",
    "markdown==3.3.3",
    "matplotlib==3.3.4",
    "mysqlclient==2.0.3",
    "node==1.2.2",
    "npm==0.1.1",
    "numpy==1.19.5",
    "oauthlib==3.1.0",
    "odict==1.9.0",
    "opt-einsum==3.3.0",
    "optional-django==0.1.0",
    "pandas==1.2.3",
    "parso==0.8.1",
    "pickleshare==0.7.5",
    "pillow==8.1.0",
    "plumber==1.7",
    "prompt-toolkit==3.0.14",
    "protobuf==3.14.0",
    "pyasn1==0.4.8",
    "pyasn1-modules==0.2.8",
    "pydotplus==2.0.2",
    "pygments==2.7.4",
    "pyparsing==2.4.7",
    "pytest>=9.0.0",
    "pytest-asyncio>=0.23.3",
    "python-dateutil==2.8.1",
    "pytz==2021.1",
    "pywin32==300",
    "pyyaml==5.4.1",
    "pyzmq==22.0.0",
    "requests==2.25.1",
    "requests-oauthlib==1.3.0",
    "rsa==4.7",
    "scikit-learn==0.24.2",
    "scipy==1.4.1",
    "six==1.15.0",
    "sqlparse==0.4.1",
    "tensorboard==2.2.2",
    "tensorboard-data-server==0.6.1",
    "tensorboard-plugin-wit==1.8.0",
    "tensorflow==2.2.0",
    "tensorflow-estimator==2.2.0",
    "tensorflow-gpu==2.4.1",
    "termcolor==1.1.0",
    "threadpoolctl==2.1.0",
    "tornado==6.1",
    "traitlets==5.0.5",
    "typing-extensions==3.7.4.3",
    "urllib3==1.26.3",
    "wcwidth==0.2.5",
    "werkzeug==1.0.1",
    "wrapt==1.12.1",
    "zipp==3.4.0",
    "zope-component==6.0",
    "zope-deferredimport==5.0",
    "zope-deprecation==5.0",
    "zope-event==5.0",
    "zope-hookable==6.0",
    "zope-interface==6.4.post2",
    "zope-lifecycleevent==5.0",
    "zope-proxy==5.3",
]
