[project]
name = "spareroom-kata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.1",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0.3",
    "uvicorn>=0.38.0",
]
